--- a/web/src/components/TeacherItem/styles.css
+++ b/web/src/components/TeacherItem/styles.css
@@ -15,7 +15,7 @@
 .teacher-item header img {
   width: 8rem;
   height: 8rem;
-  border-radius: 50%;
+  border-radius: 4rem;
 }
 
 .teacher-item header div {
@@ -43,7 +43,7 @@
 .teacher-item footer {
   padding: 3.2rem 2rem;
   background: var(--color-box-footer);
-  border-top: 1px solid var(--color-line-in-text);
+  border-top: 1px solid var(--color-line-in-white);
   margin-top: 3.2rem;
   display: flex;
   align-items: center;
@@ -56,7 +56,7 @@
   display: block;
 }
 
-.teacher-item footer button {
+.teacher-item footer a {
   width: 20rem;
   height: 5.6rem;
   background: var(--color-secondary);
@@ -69,20 +69,21 @@
   align-items: center;
   justify-content: space-evenly;
   transition: 0.2s;
+  text-decoration: none;
 }
 
-.teacher-item footer button:hover {
+.teacher-item footer a:hover {
   background: var(--color-secondary-dark);
 }
 
-
 @media (min-width: 700px) {
-  .teacher-item header, footer {
+  .teacher-item header,
+  .teacher-item footer{
     padding: 3.2rem;
   }
 
-  .teacher-item > p {
-    padding: 0 3.2rem
+  .teacher-item > p{
+    padding: 0 3.2rem;
   }
 
   .teacher-item footer p strong {
@@ -90,13 +91,13 @@
     margin-left: 1.6rem;
   }
 
-  .teacher-item footer button {
+  .teacher-item footer a {
     width: 24.5rem;
     font-size: 1.6rem;
     justify-content: center;
   }
 
-  .teacher-item footer button img {
+  .teacher-item footer a img {
     margin-right: 1.6rem;
   }
 }
